--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -58,6 +58,12 @@ services:
         autowire: true
         autoconfigure: true
 
+    AppBundle\Controller\Membership\:
+      resource: '../../sources/AppBundle/Controller/Membership/*'
+      autowire: true
+      autoconfigure: true
+
+
     AppBundle\Command\IndexTalksCommand:
         autowire: true
         autoconfigure: true
